3-docker-kubernetes/20-eks-aws-load-balancer-controller/hello/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-public
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: "fastcampus-aws-lb-test-public"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /hello
            backend:
              service:
                name: hello
                port:
                  name: http
